--- a/book/main.tex
+++ b/book/main.tex
@@ -117,25 +117,7 @@
 %	PART 3: Finite Difference Methods
 %----------------------------------------------------------------------------------------
 
-\part{Part 3: Finite Difference Methods}
-
-\chapterimage{chapter_head_2.pdf} % Chapter heading image
-
-\chapter{Taylor-Series}
-
-\section{Grid Spacing}\index{Grid Spacing}
-
-\section{Number of Terms}\index{Number of Terms}
-
-\chapter{Finite Difference Methods}
-
-\chapter{Examples}
-
-\section{Linear Advection}\index{Linear Advection}
-
-\section{Burgers Equation}\index{Burgers Equation}
-
-\section{Linear Diffusion}\index{Linear Diffusion}
+\input{Parts/Part3.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART 4: Finite Volume Methods
